--- a/_includes/api/example_result.html
+++ b/_includes/api/example_result.html
@@ -56,6 +56,12 @@
 .modal-header {
   padding: 5px;
   text-align: center;
+  border-radius: 10px;
+}
+
+.modal-header p {
+  margin: 0;
+  padding: 12px 0;
 }
 
 .modal-body {
@@ -90,6 +96,19 @@ hr {
   width: auto;
 }
 
+@media screen and (max-width: 600px) {
+  input[type=text], textarea, code {    
+    width: 100%;
+    margin-top: 6px;
+  }
+}
+@media screen and (max-width: 400px) {
+  button {    
+    width: 100%;
+    margin-top: 6px;
+  }
+}
+
 </style>
 <div>
   {% capture path %} {{ "/api/v1/"| append: include.endpoint }}{% endcapture %}
@@ -98,52 +117,10 @@ hr {
   <div>
     {% highlight json %}
     {{ res[1].examples.'0'.value | newline_to_br | replace: '<br />', ' ' }}
-  {% endhighlight %} </div>
-  <!-- The Modal -->
-  <div id="myModal" class="modal">
-    <!-- Modal content -->
-    <div class="modal-content">
-      <div class="modal-header theme_box--space theme_type--dark">
-        <span id="close">&times;</span>
-        <p class="align--center">API Playground</p>
-      </div>
-      <div class="modal-body">
-        <h2>Server Selection</h2>
-        <span>
-          <p id="urlBarPosition"></p> &nbsp;
-          <button id="useLocalhost" class="button--dark" size="10">Use localhost</button> &nbsp; <button id="editUrl" class="button--dark">Edit url</button>
-        </span>
-        <br>
-        <br>
-        <h2>Response</h2>
-        <span id="response-position"></span>
-      </div>
-      <div class="modal-footer theme_box--white">
-        <h2>Playground</h2> &nbsp;
-        {% if include.authentication %}
-        <input type="text" id="Auth-Token" class="space border" placeholder="Enter Auth-Token" size="34"> &nbsp;
-        <input type="text" id="UserId" class="border" placeholder="Enter UserId" size="34">
-            <button class="button--dark" onclick="addHeaders()">Add Auth</button>
-          {% endif %}
-          <br>
-          {% if include.parameters %}
-          example <code>{{site.data.api.[include.category].paths[include.fullPath][include.method].requestBody.content["application/json"].examples['0'].value | markdownify}}</code> <br>
-          <textarea class="select--theme-light container" name="play-position" id="play-position" cols="65" rows="10">
-          </textarea> &nbsp;
-        </div>
-        <button id="sendParameters" onclick="getParameters()" class="button">Send API Request</button>
-        {% else %}
-        <div>
-          <textarea id="play-position" style="display: none;"></textarea> <br>
-        </div>
-        <button id="sendParameters" onclick="getParameters()" class="button">Send API Request</button>
-        {% endif %}
-      </div>
-    </div>
+    {% endhighlight %}
   </div>
   {% endfor %}
   <button id="initiateButton" onclick="showPanels()" class="button--full button--dark align--center" style="
-  /*position:fixed;*/
   width: 20%;
   /*height:60px;*/
   bottom: 0%;
@@ -154,35 +131,80 @@ hr {
   ">
   Try it
 </button>
+<!-- The Modal -->
+<div id="modal" class="modal">
+  <!-- Modal content -->
+  <div class="modal-content">
+    <div class="modal-header theme_box--space theme_type--dark">
+      <span id="close">&times;</span>
+      <p class="align--center">API Playground</p>
+    </div>
+
+    <div class="modal-body">
+      <h3>Server Selection</h3>
+      <div>
+        <p id="urlBarPosition"></p>
+        <p>
+          <button id="useLocalhost" class="button--dark" size="10">Use localhost</button>
+          <button id="editUrl" class="button--dark">Edit url</button>
+        </p>
+      </div>
+      <h3>Response</h3>
+      <span id="response-position"></span>
+    </div>
+
+    <div class="modal-footer theme_box--white">
+      <h3>Playground</h3>
+      {% if include.authentication %}
+      <input type="text" id="Auth-Token" class="space border" placeholder="Enter Auth-Token" size="34">
+      <input type="text" id="UserId" class="border" placeholder="Enter UserId" size="34">
+      <button class="button--dark" onclick="addHeaders()">Add Auth</button>
+      {% endif %}
+      <br>
+      {% if include.parameters %}
+      example <code>{{site.data.api.[include.category].paths[include.fullPath][include.method].requestBody.content["application/json"].examples['0'].value | markdownify}}</code> <br>
+      <textarea class="select--theme-light container" name="play-position" id="play-position" cols="65" rows="10">
+      </textarea>
+    </div>
+
+    <button id="sendApiRequest" onclick="getParameters()" class="button">Send API Request</button>
+    {% else %}
+    <div>
+      <textarea id="play-position" style="display: none;"></textarea> <br>
+    </div>
+    <button id="sendApiRequest" onclick="getParameters()" class="button">Send API Request</button>
+    {% endif %}
+  </div>
+</div>
 </div>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script>
-const modal = $("#myModal");
-const method = `{{ include.method }}`;
+  const modal = $("#modal");
+  const method = `{{ include.method }}`;
 
-let url = `https://graphql.rocket.chat{{path}}`.replace(/ /g, '');
+  let url = `https://graphql.rocket.chat{{path}}`.replace(/ /g, '');
 
-if ($("#urlBar").val()) {
-  url = $("#urlBar").val();
-}
-console.log(url)
-
-if($("#authToken") && $("#UserId")) {
-  if(window.localStorage.getItem('authParameters')) {
-    let authParameters = JSON.parse(window.localStorage.getItem('authParameters'));
-    $("#Auth-Token").val(authParameters.authToken);
-    $("#UserId").val(authParameters.userId);
+  if ($("#urlBar").val()) {
+    url = $("#urlBar").val();
   }
-}
+  console.log(url)
 
-const showPanels = () => {
-  modal.css("display", "block");
+  if($("#authToken") && $("#UserId")) {
+    if(window.localStorage.getItem('authParameters')) {
+      let authParameters = JSON.parse(window.localStorage.getItem('authParameters'));
+      $("#Auth-Token").val(authParameters.authToken);
+      $("#UserId").val(authParameters.userId);
+    }
+  }
+
+  const showPanels = () => {
+    modal.css("display", "block");
     // $("#play-ground").show()
     $("#play-position").focus();
     // $("#initiateButton").hide(200);
   }
 
-const addHeaders = () => {
+  const addHeaders = () => {
     const authToken = $("#Auth-Token").val();
     const userId = $("#UserId").val();
     let authParameters = {authToken, userId};
