--- a/_includes/api/example_result.html
+++ b/_includes/api/example_result.html
@@ -2,12 +2,12 @@
 .modal {
   display: none;
   position: fixed;
-  z-index: 1; 
+  z-index: 1;
   padding-top: 50px;
   left: 0;
   top: 0;
-  width: 100%; 
-  height: 100%; 
+  width: 100%;
+  height: 100%;
   overflow: auto;
   background-color: rgba(3,12,26,0.6); /* $space with opacity */
   padding-top: 104px;
@@ -31,7 +31,7 @@
 
 /* Add Animation */
 @-webkit-keyframes animatetop {
-  from {top:-300px; opacity:0} 
+  from {top:-300px; opacity:0}
   to {top:0; opacity:1}
 }
 
@@ -99,14 +99,18 @@ hr {
   width: auto;
 }
 
+#sendApiRequest {
+    margin: 0px 0px 18px, 24px;
+}
+
 @media screen and (max-width: 600px) {
-  input[type=text], textarea, code {    
+  input[type=text], textarea, code {
     width: 100%;
     margin-top: 6px;
   }
 }
 @media screen and (max-width: 400px) {
-  button {    
+  button {
     width: 100%;
     margin-top: 6px;
   }
