--- a/_includes/api/example_result.html
+++ b/_includes/api/example_result.html
@@ -100,7 +100,7 @@ hr {
 }
 
 #sendApiRequest {
-    margin: 0px 0px 18px, 24px;
+    margin: 0px 0px 18px 24px;
 }
 
 @media screen and (max-width: 600px) {
